--- a/services.css
+++ b/services.css
@@ -474,8 +474,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	position: relative;
 	border-radius: 5px;
-	background-color: #ffffff;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	background-color: #eeeeee;
 }
 
 .mid_info h3{
