--- a/mobile-app.css
+++ b/mobile-app.css
@@ -1774,17 +1774,15 @@ a.footer-logo img{
 }
 
 .col_info input[type="email"]{
-	display: block;
 	width: 100%;
 	height: 50px;
-	padding: 14px;
-	padding-left: 0;
+	padding: 0 6px 0 0;
 	background-color: #ffffff;
 	border: none;
 	border-bottom: solid 1px #111111;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
-	font-weight: 600;
+	font-weight: normal;
 	color: #333333;
 	letter-spacing: 1px;
 }
