--- a/about-us.css
+++ b/about-us.css
@@ -606,7 +606,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .photo_image{
 	position: relative;
 	overflow: hidden;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
 	z-index: 1;
 }
 
@@ -666,6 +665,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	padding: 30px 20px;
 	background-color: #111111;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
 }
 
 .color_mid_box{
@@ -674,6 +674,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	padding: 30px 20px;
 	background-color: #1488cc;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
 }
 
 .white_bottom_box{
@@ -681,7 +682,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	overflow: hidden;
 	padding: 30px 20px;
-	background-color: #f6f6f6;
+	background-color: #ffffff;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
 }
 
 .box_check .fi::before{
