--- a/saas.css
+++ b/saas.css
@@ -655,7 +655,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin-bottom: calc(9em + 40px);
 	min-height: 400px;
 	padding: 7em 25px;
-	background-color: #eeeeee;
+	background-color: #f7f7f7;
 }
 
 .saas_group_two{
@@ -957,8 +957,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	padding-bottom: 25px;
 	display: block;
-	background-color: #ffffff;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	background-color: #f7f7f7;
 }
 
 .inner_crumb{
